package messaging;

option java_generic_services = true;

message MessageString {
	optional string message = 1;
}

message MessageCount {
	required int32 count = 1;
}

message MessageWeather {
	required string location = 1;
	required int32 temperature = 2;
}

message Void {
}

service HelloService {
	rpc sayHello(MessageString) returns (MessageString);
}

service WeatherService {
	rpc subscribeBroadcast(MessageString) returns (Void);
}

service WeatherSubscriberService {
	rpc weatherBroadcast(MessageWeather) returns (Void);
}

service WordCountService {
	rpc wordCount(MessageString) returns (MessageCount);
}
